--- a/ecommerce/templates/trackingsystem/index.html
+++ b/ecommerce/templates/trackingsystem/index.html
@@ -1,4 +1,4 @@
-{% extends 'ecommerce/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
 {% block title %}
@@ -7,7 +7,6 @@
 
 {% block link %}
     <link rel="stylesheet" href="{% static 'trackingsystem/styles.css' %}">
-    
 {% endblock %}
 
 {% block body %}
@@ -19,4 +18,8 @@
             <p>----------------------------------------</p>
         </div>    
     {% endfor %}
+
+    <form action="{% url 'trackingsystem:add' %}" style="margin: 0 0 1rem 1rem;">
+        <button type="submit" value="Go to Google"> Add Order </button>
+    </form>
 {% endblock %}
